@@ -1,5 +1,10 @@
 2008-11-08  Sam Steingold  <sds@gnu.org>
 
+	* modules/rawsock/rawsock.c (SOCKADDR-FAMILY):
+	return family as a keyword
+
+2008-11-08  Sam Steingold  <sds@gnu.org>
+
 	* predtype.d (with_gc_statistics): avoid a format argument type
 	mismatch warning
 
